# MusicVisualizer

./: .clangd  .gitignore  conanfile.py
src/: CMakeLists.txt  CMakeUserPresets.json  compile_commands.json
src/GLObjects/: CMakeLists.txt
src/GLObjects/private_header/: ErrorMacros.h
src/GLObjects/public_header/: FragmentShader.h  IndexBuffer.h  MainWindow.h  Renderer.h  Shader.h  ShaderManager.h  ShaderProgram.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  VertexShader.h  WindowGl.h
src/GLObjects/source/: FragmentShader.cpp  IndexBuffer.cpp  MainWindow.cpp  Renderer.cpp  Shader.cpp  ShaderManager.cpp  ShaderProgram.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  VertexShader.cpp  WindowGl.cpp
src/res/shaders/: Basic.shader  fragment.glsl  vertex.vert
src/source/: main.cpp
